Add instruction to increase PermSize